src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Academic_Interest__c</fullName>
        <label>Academic Interest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Athletic_Recruit__c</fullName>
        <label>Athletic Recruit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Men&apos;s Baseball</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Basketball</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Cross-Country</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Football</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Golf</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Hockey</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Soccer</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Tennis</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Track</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Basketball</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Cross-Country</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Golf</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Hockey</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Soccer</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Softball</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Tennis</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Track</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Volleyball</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bethel_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup for the host of an Appointment.</description>
        <inlineHelpText>Bethel Representative hosting this Appointment, if they have a Salesforce account.</inlineHelpText>
        <label>Bethel Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active internal Salesforce user.</errorMessage>
            <filterItems>
                <field>User.Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bethel_Representative__c</fullName>
        <description>The name of the representative the student is meeting with for an Appointment.</description>
        <inlineHelpText>The name of the representative hosting the Appointment.</inlineHelpText>
        <label>Bethel Representative</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Key__c</fullName>
        <description>An external ID for websites or integrations to access this Campaign. If left blank when the Campaign is created, a workflow rule automatically sets it to the 18-digit Salesforce ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>Set this to a custom external ID value for websites or integrations to match on. If left blank, it will be set to the 18-digit Salesforce ID.</inlineHelpText>
        <label>Campaign Key</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Confirmation_Call__c</fullName>
        <description>Date that a student worker placed a call confirming the visit.</description>
        <inlineHelpText>Date confirmation call was made</inlineHelpText>
        <label>Confirmation Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Email__c</fullName>
        <label>Confirmation Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_per_Contact__c</fullName>
        <description>Divids actual cost by number of contacts</description>
        <formula>ActualCost / NumberOfContacts</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per Contact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Time_12_hour__c</fullName>
        <description>Converts End Time to 12-hour time, in text, for Schedule Detail field.</description>
        <formula>IF( 
OR( 
VALUE( MID( TEXT( End_Time__c ), 0, 2 ) ) = 0, 
VALUE( MID( TEXT( End_Time__c ), 0, 2 ) ) = 12 
), 
&quot;12&quot;, 
TEXT( VALUE( MID( TEXT( End_Time__c ), 0, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( End_Time__c ), 0, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( End_Time__c ), 4, 2 ) 
&amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( End_Time__c ), 0, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time (12-hour)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_Time_old__c</fullName>
        <label>End Time (old)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Counselor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Counselor</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Must select an Admissions Counselor.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Admissions</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Time_Temporary__c</fullName>
        <description>For bringing over old Campaign Event Times</description>
        <inlineHelpText>Event Time from old System. This will go away and we should be using Start and End Time.</inlineHelpText>
        <label>Event Time (Temporary)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <description>for links to Post-Trad event pages</description>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Extracurricular_Interests__c</fullName>
        <label>Extracurricular Interests</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guests__c</fullName>
        <inlineHelpText>Number of guests NOT including main contact.</inlineHelpText>
        <label>Guests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location of an appointment.</description>
        <inlineHelpText>In what room or location will the Appointment take place?</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether a visiting student will stay for lunch.</description>
        <inlineHelpText>Whether the student is staying for lunch.</inlineHelpText>
        <label>Lunch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Time_Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>tracks whether Start Time has been pushed back 5 hours after the May 10 migration</description>
        <label>Migration Time Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Class__c</fullName>
        <description>Class a student will attend as part of an Appointment.</description>
        <inlineHelpText>Which class is the Student attending?</inlineHelpText>
        <label>Name of Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overnight_Date__c</fullName>
        <label>Overnight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <description>used for tracking parent email info from Visit forms</description>
        <label>Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <formula>Contact__r.Preferred_Name_Calculated__c + &quot; &quot; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Campaign_Id__c</fullName>
        <externalId>true</externalId>
        <label>Previous Campaign Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RFI_Attributes__c</fullName>
        <label>RFI Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Athletics</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Military / Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFI_Version__c</fullName>
        <label>RFI Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Post-Trad</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>University level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSVP_Date__c</fullName>
        <label>RSVP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receiving_BU_Bucks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receiving BU Bucks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Representative_Department__c</fullName>
        <description>Bethel Representative&apos;s department.</description>
        <inlineHelpText>Representative&apos;s department. This will auto-fill if Bethel Contact is updated.</inlineHelpText>
        <label>Representative Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anthropology, Sociology, and Reconciliation Studies</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Biblical and Theological Studies</fullName>
                </value>
                <value>
                    <fullName>Biological Sciences</fullName>
                </value>
                <value>
                    <fullName>BUILD: Bethel University Inclusive Learning and Development</fullName>
                </value>
                <value>
                    <fullName>Business and Economics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Communication Studies</fullName>
                </value>
                <value>
                    <fullName>Disability Resources and Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Honors</fullName>
                </value>
                <value>
                    <fullName>Humanities</fullName>
                </value>
                <value>
                    <fullName>Human Kinetics and Applied Health Science</fullName>
                </value>
                <value>
                    <fullName>Mathematics and Computer Science</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Nursing</fullName>
                </value>
                <value>
                    <fullName>Philosophy</fullName>
                </value>
                <value>
                    <fullName>Physics and Engineering</fullName>
                </value>
                <value>
                    <fullName>Political Science</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Social Work</fullName>
                </value>
                <value>
                    <fullName>Theatre Arts</fullName>
                </value>
                <value>
                    <fullName>World Languages and Cultures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Representative_Sport__c</fullName>
        <description>Bethel Representative&apos;s Sport, if they are a Coach. For appointments.</description>
        <inlineHelpText>If Representative is a coach, what sport do they coach?</inlineHelpText>
        <label>Representative Sport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Men&apos;s Baseball</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Basketball</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Cross-Country</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Football</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Golf</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Hockey</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Soccer</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Tennis</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Track</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Basketball</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Cross-Country</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Golf</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Hockey</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Soccer</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Softball</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Tennis</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Track</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Volleyball</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Representative_Type__c</fullName>
        <description>Type of representative for this Campaign.</description>
        <label>Representative Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adjunct Professor</fullName>
                </value>
                <value>
                    <fullName>Admissions Counselor</fullName>
                </value>
                <value>
                    <fullName>Alumnus</fullName>
                </value>
                <value>
                    <fullName>Assistant Director of Admissions</fullName>
                </value>
                <value>
                    <fullName>Athletic Recruiter</fullName>
                </value>
                <value>
                    <fullName>Campus Pastor</fullName>
                </value>
                <value>
                    <fullName>Chair</fullName>
                </value>
                <value>
                    <fullName>Chapel Speaker</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Current Athlete</fullName>
                </value>
                <value>
                    <fullName>Current Student</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Director of Admissions</fullName>
                </value>
                <value>
                    <fullName>Enrollment Counselor</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>PSEO Coordinator</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Transfer Admissions Counselor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_City_and_State__c</fullName>
        <description>Combines City, State, and Zip for use in schedules.</description>
        <formula>Visit__r.Contact__r.MailingCity &amp; &quot;, &quot; &amp; text(Visit__r.Contact__r.MailingStateCode) &amp; &quot; &quot; &amp; Left(Visit__r.Contact__r.MailingPostalCode, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact&apos;s City, State, and Zip</inlineHelpText>
        <label>Schedule - City and State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Details__c</fullName>
        <description>Friendly Detail text for Visit Schedules.</description>
        <formula>Visit__r.Start_Time_12_hour__c
&amp; 
&quot; . . . . . . . &quot; &amp;  Visit__r.Contact__r.Preferred_Name_Calculated__c &amp; &quot; &quot; &amp; Visit__r.Contact__r.LastName &amp; &quot; (&quot; &amp; Visit__r.Contact__r.MailingCity &amp; &quot;, &quot; &amp; text(Visit__r.Contact__r.MailingStateCode) &amp; &quot; &quot; &amp; Left(Visit__r.Contact__r.MailingPostalCode, 5) &amp; &quot;)&quot; 
&amp; 
&quot; . . . . . . . App Owner: &quot; &amp;  Visit__r.Enrollment_Counselor__r.FirstName &amp; &quot; &quot; &amp; Visit__r.Enrollment_Counselor__r.LastName
&amp; 
&quot; . . . . . . . Academic Interest: &quot; 
&amp; 
Visit__r.Academic_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Visit Detail text for schedules</inlineHelpText>
        <label>Schedule - Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Text_CAS__c</fullName>
        <description>Combines Appointment Campaign fields into a print friendly format for Visit Schedules.</description>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
CASE( 
Type, 

&quot;Chapel&quot;,&quot;Chapel&quot;, 

&quot;Golf Cart Grounds Tour&quot;,&quot;Golf Cart Grounds Tour&quot;, 

&quot;Attend class&quot;, &quot;Attend&quot; 
&amp; 
&quot; &apos;&quot; &amp; Name_of_Class__c &amp; &quot;&apos; with &quot; &amp; text(Representative_Department__c) &amp; &quot; &quot; &amp; text(Representative_Type__c) &amp; &quot; &quot; &amp; Bethel_Representative__c, 

&quot;Lunch&quot;, 
&quot;Enjoy lunch with a current BU student&quot;, 

&quot;Tour of Campus&quot;,	
&quot;Campus Tour&quot;, 

&quot;Counselor Visit&quot;,	
&quot;Visit&quot; 
&amp; 
&quot; with &quot; &amp; text(Representative_Type__c) &amp; &quot;, &quot; &amp; Bethel_Representative__c, 


&quot;Visit&quot; 
&amp; 
&quot; with &quot; &amp; text(Representative_Department__c) &amp; &quot; &quot; &amp; TEXT(Representative_Sport__c) &amp; &quot; &quot; &amp; text(Representative_Type__c) &amp; &quot;, &quot; &amp; Bethel_Representative__c 

), 
&quot; &quot;, &quot; &quot;), 
&quot; &quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Visit Schedule text</inlineHelpText>
        <label>Schedule Text - CAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Text_Post_Trad__c</fullName>
        <description>Combines Appointment Campaign fields into a print friendly format for Visit Schedules.</description>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
CASE( 
Type, 

&quot;Chapel&quot;, 
&quot;Attend chapel&quot; 
&amp; 
&quot; with &quot; &amp; text(Representative_Type__c) &amp; &quot;, &quot; &amp; Bethel_Representative__c 
, 

&quot;Attend class&quot;,	
&quot;Attend&quot; 
&amp; 
&quot; &apos;&quot; &amp; Name_of_Class__c &amp; &quot;&apos; with &quot; &amp; text(Representative_Department__c) &amp; &quot; &quot; &amp; text(Representative_Type__c) &amp; &quot; &quot; &amp; Bethel_Representative__c 
, 

&quot;Lunch&quot;, 
&quot;Eat lunch&quot; 
&amp; 
&quot; with &quot; &amp; text(Representative_Type__c) &amp; &quot;, &quot; &amp; Bethel_Representative__c 
, 

&quot;Tour of Campus&quot;,	
&quot;Tour of campus&quot; 
&amp; 
&quot; with &quot; &amp; text(Representative_Type__c) &amp; &quot;, &quot; &amp; Bethel_Representative__c 
, 

&quot;Meeting&quot;, 

IF( 
text(Representative_Type__c) == &quot;&quot; 
, 
&quot;Meeting&quot; &amp; &quot; with &quot; &amp; Bethel_Representative__c 
, 
&quot;Meeting&quot; &amp; &quot; with &quot; &amp; text(Representative_Type__c) &amp; &quot;, &quot; &amp; Bethel_Representative__c 
) 

, 


text(Type) 
&amp; 
&quot; with &quot; &amp; text(Representative_Type__c) &amp; &quot;, &quot; &amp; Bethel_Representative__c 

) 
, 
&quot; &quot;, 
&quot; &quot; 
) 
, 
&quot; &quot;, 
&quot; &quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Visit Schedule text</inlineHelpText>
        <label>Schedule Text - Post-Trad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>Post-Trad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Detail__c</fullName>
        <label>Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State Fair</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ACT - Purchased</fullName>
                </value>
                <value>
                    <fullName>ACT - Self submitted</fullName>
                </value>
                <value>
                    <fullName>ActSix</fullName>
                </value>
                <value>
                    <fullName>Admitted Student Overnight</fullName>
                </value>
                <value>
                    <fullName>All State Music</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Boys Basketball</fullName>
                </value>
                <value>
                    <fullName>Boys Soccer</fullName>
                </value>
                <value>
                    <fullName>Business Academy</fullName>
                </value>
                <value>
                    <fullName>Cappex</fullName>
                </value>
                <value>
                    <fullName>CASPA</fullName>
                </value>
                <value>
                    <fullName>CBSS</fullName>
                </value>
                <value>
                    <fullName>CCCU</fullName>
                </value>
                <value>
                    <fullName>Chegg/Zinch</fullName>
                </value>
                <value>
                    <fullName>Christian Connector</fullName>
                </value>
                <value>
                    <fullName>CLT - Purchased</fullName>
                </value>
                <value>
                    <fullName>CLT - Self submitted</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>College Board</fullName>
                </value>
                <value>
                    <fullName>College in the Schools</fullName>
                </value>
                <value>
                    <fullName>College Raptor</fullName>
                </value>
                <value>
                    <fullName>College Transcripts</fullName>
                </value>
                <value>
                    <fullName>Community College</fullName>
                </value>
                <value>
                    <fullName>Consortium</fullName>
                </value>
                <value>
                    <fullName>Converge</fullName>
                </value>
                <value>
                    <fullName>Cross Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conferences &amp; Fairs</fullName>
                </value>
                <value>
                    <fullName>Event &amp; Visits</fullName>
                </value>
                <value>
                    <fullName>Application Create</fullName>
                </value>
                <value>
                    <fullName>Application Change</fullName>
                </value>
                <value>
                    <fullName>Application Submit</fullName>
                </value>
                <value>
                    <fullName>Camps</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>List &amp; Vendor</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Registrar</fullName>
                </value>
                <value>
                    <fullName>Transcripts</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time_12_hour__c</fullName>
        <description>Converts Start Time to 12-hour time, in text, for Schedule Detail field.</description>
        <formula>IF( 
OR( 
VALUE( MID( TEXT( Start_Time__c ), 0, 2 ) ) = 0, 
VALUE( MID( TEXT( Start_Time__c ), 0, 2 ) ) = 12 
), 
&quot;12&quot;, 
TEXT( VALUE( MID( TEXT( Start_Time__c ), 0, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( Start_Time__c ), 0, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( Start_Time__c ), 4, 2 ) 
&amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( Start_Time__c ), 0, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time (12-hour)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time_old__c</fullName>
        <label>Start Time (old)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tell_Me_More_URL__c</fullName>
        <formula>&quot;https://full-bethelu.cs92.force.com/campaignrfi/CampaignRFIForm?CampaignId=&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tell Me More URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Weekday__c</fullName>
        <formula>CASE( 
				WEEKDAY( StartDate ), 
				1, &quot;Sunday&quot;, 
				2, &quot;Monday&quot;, 
				3, &quot;Tuesday&quot;, 
				4, &quot;Wednesday&quot;, 
				5, &quot;Thursday&quot;, 
				6, &quot;Friday&quot;, 
				7, &quot;Saturday&quot;,
				&quot;No Start Date&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Weekday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Id__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Monitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor__c</fullName>
        <formula>IF( wbsendit__Campaign_Monitor_Id__c == null,
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;LinkCampaign?Id=&quot; + Id , &quot;Link to Campaign Monitor&quot;, &quot;_self&quot;),
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; + wbsendit__Campaign_Monitor_Id__c + &quot;&amp;reportId=1&quot;, &quot;View Report&quot;, &quot;_self&quot;) + &quot; &quot; + HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;Disconnect?Id=&quot; + Id, &quot;[Disconnect]&quot;, &quot;_self&quot;))</formula>
        <inlineHelpText>Connect this Salesforce Campaign to sent campaigns in Campaign Monitor. Use this to manage campaign reports from within Salesforce. Send It will add any members it finds in Campaign Monitor to this campaign.</inlineHelpText>
        <label>Campaign Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Text_Version__c</fullName>
        <description>Text version of the email sent.</description>
        <inlineHelpText>Text version of the email sent.</inlineHelpText>
        <label>Email Text Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Web_Version__c</fullName>
        <description>Web version of the email campaign.</description>
        <inlineHelpText>Web version of the email campaign.</inlineHelpText>
        <label>Email Web Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Bounced__c</fullName>
        <description>Number of bounced emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of bounced emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>